<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.RegisterActivity"
    android:orientation="vertical"
    android:padding="40dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="30dp"/>

    <EditText
        android:id="@+id/email_edit_text_register_view"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mail"
        android:autofillHints="false"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/firstname_edit_text_register_view"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/firstname"
        android:autofillHints="false"
        android:inputType="text" />

    <EditText
        android:id="@+id/lastname_edit_text_register_view"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastname"
        android:autofillHints="false"
        android:inputType="text" />

    <EditText
        android:id="@+id/password_edit_text_register_view"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_edit_text_login_view"
        android:autofillHints="false"
        android:inputType="textPassword" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/toRegister"/>

</androidx.appcompat.widget.LinearLayoutCompat>