<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ProfileActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tab">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit_text_profile_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mail"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/email_text_view_profile_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/red"
                android:visibility="invisible"
                android:text="@string/emailNotValid" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstname_edit_text_profile_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/firstname"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/firstname_text_view_profile_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/red"
                android:visibility="invisible"
                android:text="@string/firstname_required" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastname_edit_text_profile_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastname"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/lastname_text_view_profile_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/red"
                android:visibility="invisible"
                android:text="@string/lastname_required" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address_edit_text_profile_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/adresse"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/address_text_view_profile_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/red"
                android:visibility="invisible"
                android:text="@string/address_required" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/zipcode_edit_text_profile_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/code_postale"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/zipcode_text_view_profile_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/red"
                android:visibility="invisible"
                android:text="@string/zipcode_required" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/city_edit_text_profile_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/city_text_view_profile_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/red"
                android:visibility="invisible"
                android:text="@string/city_required" />

            <Button
                android:id="@+id/save_button_profile_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/save"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/tab"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">

        <Button
            android:id="@+id/homeButtonFromProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:layout_marginEnd="10dp"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/ticketButtonFromProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tickets"
            android:layout_marginEnd="10dp"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profil"
            android:backgroundTint="@color/lightGray"
            android:textColor="@android:color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
