<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".views.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/application_title_login_view"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/email_edit_text_login_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_edit_text_login_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_edit_text_login_view"
        android:inputType="textEmailAddress"
        android:autofillHints="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintWidth_default="spread"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/email_error_login_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/emailNotValid"
        android:textColor="@color/red"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_edit_text_login_view" />

    <EditText
        android:id="@+id/password_edit_text_login_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password_edit_text_login_view"
        android:inputType="textPassword"
        android:autofillHints="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_error_login_text_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintWidth_default="spread" />

    <TextView
        android:id="@+id/password_error_login_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/passwordRequired"
        android:textColor="@color/red"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_edit_text_login_view" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/login_button_login_view"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_error_login_text_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintWidth_default="spread" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/NotRegistered"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintWidth_default="spread" />

</androidx.constraintlayout.widget.ConstraintLayout>
