<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TicketActivityActivity">
    <EditText
        android:id="@+id/createTicketTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="30dp"
        android:inputType="text"/>
    <EditText
        android:id="@+id/createTicketDescriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createTicketTitleEditText"
        android:layout_marginBottom="30dp"
        android:inputType="text"/>
    <Button
        android:id="@+id/sendTicketButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendTicket"
        app:layout_constraintBottom_toTopOf="@id/tab"/>
    <LinearLayout
        android:id="@+id/tab"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">

        <Button android:id="@+id/homeButtonFromTicket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/ticketButtonFromTicket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tickets"
            android:layout_marginRight="10dp"/>

        <Button android:id="@+id/profileButtonFromTicket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profil" android:layout_marginRight="10dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>