<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailTicketActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tab">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">
                <TextView
                    android:id="@+id/titleDetailTicketTextView"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/chat"/>

            </LinearLayout>
            <TextView
                android:id="@+id/statusDetailTicketTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/descriptionDetailTicketTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>
    <LinearLayout
        android:id="@+id/tab"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">

        <Button android:id="@+id/homeButtonFromTicketDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/ticketButtonFromTicketDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tickets"
            android:layout_marginRight="10dp"/>

        <Button android:id="@+id/profileButtonFromTicketDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profil" android:layout_marginRight="10dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>