<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="20dp"
        android:text="J'ai besoin d'une intervention pour :" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_height="0dp"
        android:id="@+id/recyclerViewCategories2"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/tab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/tab"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">

        <Button android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/ticketButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tickets"
            android:layout_marginRight="10dp"/>

        <Button android:id="@+id/profileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profil" android:layout_marginRight="10dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>